@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.19 2009/09/23 12:51:12 mg Exp $
+# $Id: CHANGES,v 1.993.2.20 2009/09/23 13:23:20 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.5 (2009/??/??)
+ - (2009/09/23) Fixed bug#3969 - Role <-> User Admin Screen Refresh Error.
  - (2009/09/23) Fixed bug#3787 - Generic Agent: Send no notifications is not working.
  - (2009/09/23) Fixed bug#4222 - Changed Italian translation of "Login As".
  - (2009/09/23) Fixed bug#3923 - Frontend::Output::FilterText###OutputFilterTextAutoLink
